{
  "version": 4,
  "terraform_version": "1.0.7",
  "serial": 362,
  "lineage": "b6d9e2f3-8b11-f037-0b74-4e006ff51193",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "web_linuxvm_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/6a714e87-de1b-4221-a6e1-f587288b158d/resourceGroups/hr-dev-rg-4lsoi7/providers/Microsoft.Network/networkInterfaces/hr-dev-web-linuxvm-nic",
            "internal_domain_name_suffix": "20u1zisjhieunmu115kxuqcwbd.zx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "web-linuxvm-ip-1",
                "primary": true,
                "private_ip_address": "10.1.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/6a714e87-de1b-4221-a6e1-f587288b158d/resourceGroups/hr-dev-rg-4lsoi7/providers/Microsoft.Network/publicIPAddresses/hr-dev-web-linuxvm-pip",
                "subnet_id": "/subscriptions/6a714e87-de1b-4221-a6e1-f587288b158d/resourceGroups/hr-dev-rg-4lsoi7/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet/subnets/hr-dev-vnet-websubnet"
              }
            ],
            "location": "uksouth",
            "mac_address": "00-22-48-3F-0E-4D",
            "name": "hr-dev-web-linuxvm-nic",
            "private_ip_address": "10.1.1.4",
            "private_ip_addresses": [
              "10.1.1.4"
            ],
            "resource_group_name": "hr-dev-rg-4lsoi7",
            "virtual_machine_id": "/subscriptions/6a714e87-de1b-4221-a6e1-f587288b158d/resourceGroups/hr-dev-rg-4lsoi7/providers/Microsoft.Compute/virtualMachines/hr-dev-web-linuxvm"
          },
          "dependencies": [
            "azurerm_subnet.snet-web",
            "azurerm_virtual_network.vnet",
            "random_string.randomstr",
            "azurerm_public_ip.web_linuxvm_pip",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "web_vmnic_nsg_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6a714e87-de1b-4221-a6e1-f587288b158d/resourceGroups/hr-dev-rg-4lsoi7/providers/Microsoft.Network/networkInterfaces/hr-dev-web-linuxvm-nic|/subscriptions/6a714e87-de1b-4221-a6e1-f587288b158d/resourceGroups/hr-dev-rg-4lsoi7/providers/Microsoft.Network/networkSecurityGroups/hr-dev-web-linuxvm-nic-nsg",
            "network_interface_id": "/subscriptions/6a714e87-de1b-4221-a6e1-f587288b158d/resourceGroups/hr-dev-rg-4lsoi7/providers/Microsoft.Network/networkInterfaces/hr-dev-web-linuxvm-nic",
            "network_security_group_id": "/subscriptions/6a714e87-de1b-4221-a6e1-f587288b158d/resourceGroups/hr-dev-rg-4lsoi7/providers/Microsoft.Network/networkSecurityGroups/hr-dev-web-linuxvm-nic-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.web_linuxvm_nic",
            "azurerm_network_security_group.web_vm_nsg",
            "azurerm_network_security_rule.web_vmnic_nsg_rule_inbound",
            "azurerm_public_ip.web_linuxvm_pip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.snet-web",
            "azurerm_virtual_network.vnet",
            "random_string.randomstr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "web_vm_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6a714e87-de1b-4221-a6e1-f587288b158d/resourceGroups/hr-dev-rg-4lsoi7/providers/Microsoft.Network/networkSecurityGroups/hr-dev-web-linuxvm-nic-nsg",
            "location": "uksouth",
            "name": "hr-dev-web-linuxvm-nic-nsg",
            "resource_group_name": "hr-dev-rg-4lsoi7",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "WebVM-NIC-Rule-Port-22",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "WebVM-NIC-Rule-Port-443",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "WebVM-NIC-Rule-Port-80",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_public_ip.web_linuxvm_pip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.snet-web",
            "azurerm_virtual_network.vnet",
            "random_string.randomstr",
            "azurerm_network_interface.web_linuxvm_nic"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "web_vmnic_nsg_rule_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "80",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/6a714e87-de1b-4221-a6e1-f587288b158d/resourceGroups/hr-dev-rg-4lsoi7/providers/Microsoft.Network/networkSecurityGroups/hr-dev-web-linuxvm-nic-nsg/securityRules/WebVM-NIC-Rule-Port-80",
            "name": "WebVM-NIC-Rule-Port-80",
            "network_security_group_name": "hr-dev-web-linuxvm-nic-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "hr-dev-rg-4lsoi7",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_interface.web_linuxvm_nic",
            "azurerm_network_security_group.web_vm_nsg",
            "azurerm_public_ip.web_linuxvm_pip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.snet-web",
            "azurerm_virtual_network.vnet",
            "random_string.randomstr"
          ]
        },
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "443",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/6a714e87-de1b-4221-a6e1-f587288b158d/resourceGroups/hr-dev-rg-4lsoi7/providers/Microsoft.Network/networkSecurityGroups/hr-dev-web-linuxvm-nic-nsg/securityRules/WebVM-NIC-Rule-Port-443",
            "name": "WebVM-NIC-Rule-Port-443",
            "network_security_group_name": "hr-dev-web-linuxvm-nic-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "hr-dev-rg-4lsoi7",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_interface.web_linuxvm_nic",
            "azurerm_network_security_group.web_vm_nsg",
            "azurerm_public_ip.web_linuxvm_pip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.snet-web",
            "azurerm_virtual_network.vnet",
            "random_string.randomstr"
          ]
        },
        {
          "index_key": "120",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/6a714e87-de1b-4221-a6e1-f587288b158d/resourceGroups/hr-dev-rg-4lsoi7/providers/Microsoft.Network/networkSecurityGroups/hr-dev-web-linuxvm-nic-nsg/securityRules/WebVM-NIC-Rule-Port-22",
            "name": "WebVM-NIC-Rule-Port-22",
            "network_security_group_name": "hr-dev-web-linuxvm-nic-nsg",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "hr-dev-rg-4lsoi7",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_public_ip.web_linuxvm_pip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.snet-web",
            "azurerm_virtual_network.vnet",
            "random_string.randomstr",
            "azurerm_network_interface.web_linuxvm_nic",
            "azurerm_network_security_group.web_vm_nsg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "web_linuxvm_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/6a714e87-de1b-4221-a6e1-f587288b158d/resourceGroups/hr-dev-rg-4lsoi7/providers/Microsoft.Network/publicIPAddresses/hr-dev-web-linuxvm-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.108.55.153",
            "ip_version": "IPv4",
            "location": "uksouth",
            "name": "hr-dev-web-linuxvm-pip",
            "resource_group_name": "hr-dev-rg-4lsoi7",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev",
              "owners": "hr"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "random_string.randomstr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "snet-web",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/6a714e87-de1b-4221-a6e1-f587288b158d/resourceGroups/hr-dev-rg-4lsoi7/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet/subnets/hr-dev-vnet-websubnet",
            "name": "hr-dev-vnet-websubnet",
            "resource_group_name": "hr-dev-rg-4lsoi7",
            "virtual_network_name": "hr-dev-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet",
            "random_string.randomstr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "a2bca9e6-3a49-4609-b29b-dfd57a40560b",
            "id": "/subscriptions/6a714e87-de1b-4221-a6e1-f587288b158d/resourceGroups/hr-dev-rg-4lsoi7/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet",
            "location": "uksouth",
            "name": "hr-dev-vnet",
            "resource_group_name": "hr-dev-rg-4lsoi7",
            "subnet": [
              {
                "address_prefix": "10.1.1.0/24",
                "id": "/subscriptions/6a714e87-de1b-4221-a6e1-f587288b158d/resourceGroups/hr-dev-rg-4lsoi7/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet/subnets/hr-dev-vnet-websubnet",
                "name": "hr-dev-vnet-websubnet",
                "security_group": "/subscriptions/6a714e87-de1b-4221-a6e1-f587288b158d/resourceGroups/hr-dev-rg-4lsoi7/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-websubnet-nsg"
              },
              {
                "address_prefix": "10.1.2.0/24",
                "id": "/subscriptions/6a714e87-de1b-4221-a6e1-f587288b158d/resourceGroups/hr-dev-rg-4lsoi7/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet/subnets/hr-dev-vnet-appsubnet",
                "name": "hr-dev-vnet-appsubnet",
                "security_group": "/subscriptions/6a714e87-de1b-4221-a6e1-f587288b158d/resourceGroups/hr-dev-rg-4lsoi7/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-appsubnet-nsg"
              },
              {
                "address_prefix": "10.1.3.0/24",
                "id": "/subscriptions/6a714e87-de1b-4221-a6e1-f587288b158d/resourceGroups/hr-dev-rg-4lsoi7/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet/subnets/hr-dev-vnet-dbsubnet",
                "name": "hr-dev-vnet-dbsubnet",
                "security_group": "/subscriptions/6a714e87-de1b-4221-a6e1-f587288b158d/resourceGroups/hr-dev-rg-4lsoi7/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-dbsubnet-nsg"
              },
              {
                "address_prefix": "10.1.4.0/24",
                "id": "/subscriptions/6a714e87-de1b-4221-a6e1-f587288b158d/resourceGroups/hr-dev-rg-4lsoi7/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet/subnets/hr-dev-vnet-bastionsubnet",
                "name": "hr-dev-vnet-bastionsubnet",
                "security_group": "/subscriptions/6a714e87-de1b-4221-a6e1-f587288b158d/resourceGroups/hr-dev-rg-4lsoi7/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-bastionsubnet-nsg"
              }
            ],
            "tags": {
              "environment": "dev",
              "owners": "hr"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "random_string.randomstr"
          ]
        }
      ]
    }
  ]
}